fix: correct links

--- a/docs/how-to-guides/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/scaffolding/extend-admin-area.mdx
@@ -12,7 +12,7 @@ import scaffoldsAdminArea from "./extend-admin-area/scaffolds-admin-area.png";
 
 :::info Can I use this?
 
-The **Extend Admin Area** scaffold (previously **Admin Area Package**) received a major overhaul in [Webiny 5.9.0](/docs/changelog/5.9.0). Note that this guide is not relevant for projects that are using Webiny 5.8.0 and lower.
+The **Extend Admin Area** scaffold (previously **Admin Area Package**) received a major overhaul in [Webiny 5.9.0](/docs/release-notes/5.9.0/changelog). Note that this guide is not relevant for projects that are using Webiny 5.8.0 and lower.
 
 :::
 
