--- a/docs/how-to-guides/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/extend-graphql-api.mdx
@@ -8,7 +8,7 @@ description: Learn how to use the Extend GraphQL API scaffold.
 
 :::info Can I use this?
 
-The **Extend GraphQL API** scaffold (previously GraphQL **API Package**) received a major overhaul in [Webiny 5.9.0](/docs/changelog/5.9.0). Note that this guide is not relevant for projects that are using Webiny 5.8.0 and lower.
+The **Extend GraphQL API** scaffold (previously GraphQL **API Package**) received a major overhaul in [Webiny 5.9.0](/docs/release-notes/5.9.0/changelog). Note that this guide is not relevant for projects that are using Webiny 5.8.0 and lower.
 
 :::
 
