--- a/docs/how-to-guides/upgrade-webiny.mdx
+++ b/docs/how-to-guides/upgrade-webiny.mdx
@@ -31,7 +31,7 @@ If you have any additional questions or concerns, please don't hesitate to send 
 
 ## How to Upgrade
 
-When planning an upgrade, always check if there's a dedicated guide for your specific Webiny version. All the guides are located in the menu on the left, for example: [5.9.0 → 5.10.0](/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0). If you see the guide that matches your versions, follow it. It may contain additional steps to upgrade your Webiny project, as sometimes there are changes in project file organization, project configs, etc.
+When planning an upgrade, always check if there's a dedicated guide for your specific Webiny version. All the guides are located in the menu on the left, for example: [5.9.0 → 5.10.0](/docs/release-notes/5.10.0/upgrade-guide). If you see the guide that matches your versions, follow it. It may contain additional steps to upgrade your Webiny project, as sometimes there are changes in project file organization, project configs, etc.
 
 If there's no dedicated article, upgrades are as easy as upgrading all the `@webiny/*` packages to the desired version.
 
