--- a/docs/release-notes/5.11.0/changelog.mdx
+++ b/docs/release-notes/5.11.0/changelog.mdx
@@ -16,7 +16,7 @@ This document highlights the most important fixes, improvements, and features, t
 
 :::info How To Upgrade?
 
-Please check the [Webiny 5.11.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.10.0-to-5.11.0) for the upgrade steps.
+Please check the [Webiny 5.11.0 migration guide](/docs/release-notes/5.11.0/upgrade-guide) for the upgrade steps.
 
 :::
 
@@ -62,7 +62,7 @@ From now on, all Webiny projects will use [Pulumi](/docs/key-topics/deployment/i
 
 For Webiny users, this will make it possible to have access to all of the new features and fixes that the framework will receive in the future.
 
-In terms of existing projects and upgrading, there shouldn't be any major changes or extra steps that you'll need to perform. But, there are a couple of things to have in mind. Be sure to check the [upgrade guide](/docs/how-to-guides/upgrade-webiny/5.10.0-to-5.11.0) for more information.
+In terms of existing projects and upgrading, there shouldn't be any major changes or extra steps that you'll need to perform. But, there are a couple of things to have in mind. Be sure to check the [upgrade guide](/docs/release-notes/5.11.0/upgrade-guide) for more information.
 
 ### Improved CI/CD Scaffolds ([#1786](https://github.com/webiny/webiny-js/pull/1786))
 
