--- a/docs/release-notes/5.11.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.11.0/upgrade-guide.mdx
@@ -21,7 +21,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 :::
 
 :::info
-Make sure to check out the [5.11.0 changelog](/docs/changelog/5.11.0) to get familiar with all the changes introduced in this release.
+Make sure to check out the [5.11.0 changelog](/docs/release-notes/5.11.0/changelog) to get familiar with all the changes introduced in this release.
 :::
 
 ## 1. Upgrade Webiny Packages
@@ -73,7 +73,7 @@ Learn more about different deployment environments in the [CI/CD / Environments]
 As stated in the [Overview](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, to prevent any data loss or other critical problems that might occur while upgrading, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 :::
 
-As mentioned in the [changelog](/docs/changelog/5.11.0), from the 5.11.0 release, all Webiny projects will use [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) v3.
+As mentioned in the [changelog](/docs/release-notes/5.11.0/changelog), from the 5.11.0 release, all Webiny projects will use [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) v3.
 
 In terms of existing projects and upgrading, there shouldn't be any major changes or extra steps that you'll need to perform. But, there are a couple of things to have in mind.
 
