--- a/docs/release-notes/5.11.1/upgrade-guide.mdx
+++ b/docs/release-notes/5.11.1/upgrade-guide.mdx
@@ -17,7 +17,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 :::
 
 :::info
-Make sure to check out the [5.11.1 changelog](/docs/changelog/5.11.1) to get familiar with all the changes introduced in this release.
+Make sure to check out the [5.11.1 changelog](/docs/release-notes/5.11.1/changelog) to get familiar with all the changes introduced in this release.
 :::
 
 ## 1. Upgrade Webiny Packages
@@ -49,4 +49,4 @@ Learn more about different deployment environments in the [CI/CD / Environments]
 
 ## 3. Open Admin Area App
 
-Finally, open the Admin Area app and execute the upgrade script when prompted. The upgrade process will remove the `password` attribute from all user records in your DynamoDB (for details, see the [changelog](/docs/changelog/5.11.1#remove-password-attribute-from-dynamodb-1842)).
+Finally, open the Admin Area app and execute the upgrade script when prompted. The upgrade process will remove the `password` attribute from all user records in your DynamoDB (for details, see the [changelog](/docs/release-notes/5.11.1/changelog#remove-password-attribute-from-dynamodb-1842)).
