--- a/docs/release-notes/5.14.0/changelog.mdx
+++ b/docs/release-notes/5.14.0/changelog.mdx
@@ -70,7 +70,7 @@ Special thanks to [IzioDev](https://github.com/IzioDev) for taking care of this.
 
 ### Custom Apollo InMemoryCache ([#1884](https://github.com/webiny/webiny-js/pull/1884))
 
-In Webiny 5.7.0 we introduced an [ApolloDynamicLink](/docs/changelog/5.7.0/#apollodynamiclink) plugin which allows you to hook into apollo-client link chain using plugins (instead of hard coding them during apollo-client setup). With that, we added support for modifying the query being executed, by using `AddQuerySelectionPlugin` plugin, which allows you to add new selection sets to the query.
+In Webiny 5.7.0 we introduced an [ApolloDynamicLink](/docs/release-notes/5.7.0/changelog/#apollodynamiclink) plugin which allows you to hook into apollo-client link chain using plugins (instead of hard coding them during apollo-client setup). With that, we added support for modifying the query being executed, by using `AddQuerySelectionPlugin` plugin, which allows you to add new selection sets to the query.
 
 Recently, we discovered that, when data is returned from Apollo cache, it does not process apollo-client links, at all. This behaviour breaks the results returned from cache, if you're using `AddQuerySelectionPlugin` to add new selection sets to the GraphQL queries.
 
