--- a/docs/release-notes/5.4.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.4.0/upgrade-guide.mdx
@@ -15,7 +15,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 :::
 
 :::info
-Make sure to check out the [5.4.0 changelog](/docs/changelog/5.4.0) to get familiar with all of the changes introduced with this release.
+Make sure to check out the [5.4.0 changelog](/docs/release-notes/5.4.0/changelog) to get familiar with all of the changes introduced with this release.
 :::
 
 ## Upgrade Webiny Packages
