--- a/docs/release-notes/5.5.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.5.0/upgrade-guide.mdx
@@ -15,7 +15,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 :::
 
 :::info
-Make sure to check out the [5.5.0 changelog](/docs/changelog/5.5.0) to get familiar with all the changes  introduced in this release.
+Make sure to check out the [5.5.0 changelog](/docs/release-notes/5.5.0/changelog) to get familiar with all the changes  introduced in this release.
 :::
 
 ## Upgrade Webiny Packages
@@ -84,7 +84,7 @@ Open your `/apps/website/code/src/components/Page/index.tsx` file and replace it
 
 #### 3. Optionally, add necessary environment variables to enable newly introduced logs forwarding
 
-The new `webiny watch` command enables you to [stream logs](/docs/changelog/5.5.0#logs) from your application code directly to your terminal. And while all new projects will have this feature automatically enabled, there are a couple of manual steps that needs to be done for projects that are making the upgrade to version `5.5.0`.
+The new `webiny watch` command enables you to [stream logs](/docs/release-notes/5.5.0/changelog#logs) from your application code directly to your terminal. And while all new projects will have this feature automatically enabled, there are a couple of manual steps that needs to be done for projects that are making the upgrade to version `5.5.0`.
 
 In [api/pulumi/dev/index.ts](https://github.com/webiny/webiny-js/blob/v5.5.0/packages/cwp-template-aws/template/api/pulumi/dev/index.ts), upon instantiating both `Graphql` and `HeadlessCMS` classes, make sure to pass the `WEBINY_LOGS_FORWARD_URL: String(process.env.WEBINY_LOGS_FORWARD_URL)` as an environment variable.
 
