--- a/docs/release-notes/5.10.0/changelog.mdx
+++ b/docs/release-notes/5.10.0/changelog.mdx
@@ -12,7 +12,7 @@ This document highlights the most important fixes, improvements, and features, t
 
 :::info How To Upgrade?
 
-Please check the [Webiny 5.10.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0) for the upgrade steps.
+Please check the [Webiny 5.10.0 migration guide](/docs/release-notes/5.10.0/upgrade-guide) for the upgrade steps.
 
 :::
 
@@ -78,7 +78,7 @@ Learn more about project applications and project organization in general, in th
 
 ### Improved Existing Scaffolds ([#1739](https://github.com/webiny/webiny-js/pull/1739))
 
-A couple of minor fixes and improvements were made to the [scaffolding utilities](/docs/how-to-guides/scaffolding/introduction), introduced in the previous [Webiny 5.9.0](/docs/changelog/5.9.0) release.
+A couple of minor fixes and improvements were made to the [scaffolding utilities](/docs/how-to-guides/scaffolding/introduction), introduced in the previous [Webiny 5.9.0](/docs/release-notes/5.9.0/changelog) release.
 
 For example, if you already had the chance to use the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) scaffold, you might notice that the default location in which the application code is generated has been changed:
 
