--- a/docs/release-notes/5.11.1/changelog.mdx
+++ b/docs/release-notes/5.11.1/changelog.mdx
@@ -12,7 +12,7 @@ This document highlights the most important fixes, improvements, and features, t
 
 :::info How To Upgrade?
 
-Please check the [Webiny 5.11.1 migration guide](/docs/how-to-guides/upgrade-webiny/5.11.0-to-5.11.1) for the upgrade steps.
+Please check the [Webiny 5.11.1 migration guide](/docs/release-notes/5.11.1/upgrade-guide) for the upgrade steps.
 
 :::
 
