--- a/docs/release-notes/5.12.0/changelog.mdx
+++ b/docs/release-notes/5.12.0/changelog.mdx
@@ -12,7 +12,7 @@ This document highlights the most important fixes, improvements, and features, t
 
 :::info How To Upgrade?
 
-Make sure you didn't miss the **[5.11.1](/docs/changelog/5.11.1)** release, which was an urgent security hotfix! You **must** apply that upgrade before moving on to **5.12.0**.
+Make sure you didn't miss the **[5.11.1](/docs/release-notes/5.11.1/changelog)** release, which was an urgent security hotfix! You **must** apply that upgrade before moving on to **5.12.0**.
 
 Please check the [Webiny 5.12.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.11.1-to-5.12.0) for the upgrade steps.
 
