fix: correct links

--- a/docs/release-notes/5.5.0/changelog.mdx
+++ b/docs/release-notes/5.5.0/changelog.mdx
@@ -19,7 +19,7 @@ import { isWindows } from "react-device-detect";
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.5.0`.
 
 :::info How To Upgrade?
-Please check the [Webiny 5.5.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0) for the upgrade steps.
+Please check the [Webiny 5.5.0 migration guide](/docs/release-notes/5.5.0/upgrade-guide) for the upgrade steps.
 :::
 
 ## Webiny CLI
@@ -149,7 +149,7 @@ Two pre-rendering related issues were fixed in this release:
 1. previewing and pre-rendering pages on non-default locales and tenants now works as expected
 2. rendering not-found page also now works as expected
 
-Note that, if upgrading to version `5.5.0`, there are a couple of [manual steps](/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0#additional-manual-upgrade-steps) that need to be done in order for these fixes to be fully applied.
+Note that, if upgrading to version `5.5.0`, there are a couple of [manual steps](/docs/release-notes/5.5.0/upgrade-guide#additional-manual-upgrade-steps) that need to be done in order for these fixes to be fully applied.
 
 ## Other
 
@@ -158,7 +158,7 @@ Note that, if upgrading to version `5.5.0`, there are a couple of [manual steps]
 This release introduces a couple of changes on a project level. Most of these are required by the newly introduced `watch` command.
 
 :::info
-All the changes can be automatically applied in your existing Webiny project via the new `webiny upgrade` command. Please take a look at the [upgrade guide](/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0) for more information.
+All the changes can be automatically applied in your existing Webiny project via the new `webiny upgrade` command. Please take a look at the [upgrade guide](/docs/release-notes/5.5.0/upgrade-guide) for more information.
 :::
 
 #### 1. `.pulumi` Folders Moved To Project Root
