--- a/docs/release-notes/5.6.0/changelog.mdx
+++ b/docs/release-notes/5.6.0/changelog.mdx
@@ -18,7 +18,7 @@ import cliWatchBrowserDemo from "./cli-watch-browser-demo.gif";
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.6.0`.
 
 :::info How To Upgrade?
-Please check the [Webiny 5.6.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.5.0-to-5.6.0) for the upgrade steps.
+Please check the [Webiny 5.6.0 migration guide](/docs/release-notes/5.6.0/upgrade-guide) for the upgrade steps.
 :::
 
 ## Headless CMS
