--- a/docs/release-notes/5.7.0/changelog.mdx
+++ b/docs/release-notes/5.7.0/changelog.mdx
@@ -15,7 +15,7 @@ import errorOverlay from "./error-overlay.png";
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.7.0`.
 
 :::info How To Upgrade?
-Please check the [Webiny 5.7.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.6.0-to-5.7.0) for the upgrade steps.
+Please check the [Webiny 5.7.0 migration guide](/docs/release-notes/5.7.0/upgrade-guide) for the upgrade steps.
 :::
 
 ## Webiny CLI
@@ -61,7 +61,7 @@ With addition of the error overlay Apollo link, to handle API errors, we noticed
 We introduced a new ApolloLink - [ApolloDynamicLink](https://github.com/webiny/webiny-js/blob/next/packages/app/src/plugins/ApolloDynamicLink.ts), to be the only custom link Webiny needs in the Apollo Client setup. This new link will look for plugins of type `apollo-link` on every request and allow you to modify the operation (headers, query, etc.). This also solves the problem of `apollo-link` plugins being lazy loaded, in which case they wouldn't even be part of the ApolloClient request processing.
 
 :::info
-This change, requires some little tweaks to your existing projects. Find all the necessary instructions in the [Webiny 5.7.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.6.0-to-5.7.0).
+This change, requires some little tweaks to your existing projects. Find all the necessary instructions in the [Webiny 5.7.0 migration guide](/docs/release-notes/5.7.0/upgrade-guide).
 :::
 
 ### Extend Page Data and Queries/Mutations
