--- a/docs/release-notes/5.13.0/changelog.mdx
+++ b/docs/release-notes/5.13.0/changelog.mdx
@@ -12,7 +12,7 @@ This document highlights the most important fixes, improvements, and features, t
 
 :::info How To Upgrade?
 
-Please check the [Webiny 5.13.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.12.0-to-5.13.0) for the upgrade steps.
+Please check the [Webiny 5.13.0 migration guide](/docs/release-notes/5.13.0/upgrade-guide) for the upgrade steps.
 
 :::
 
