--- a/docs/release-notes/5.8.0/changelog.mdx
+++ b/docs/release-notes/5.8.0/changelog.mdx
@@ -16,7 +16,7 @@ import retrieveById from "./retrieveById.png";
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.8.0`.
 
 :::info How To Upgrade?
-Please check the [Webiny 5.8.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0) for the upgrade steps.
+Please check the [Webiny 5.8.0 migration guide](/docs/release-notes/5.8.0/upgrade-guide) for the upgrade steps.
 :::
 
 ## Headless CMS
