--- a/docs/release-notes/5.9.0/changelog.mdx
+++ b/docs/release-notes/5.9.0/changelog.mdx
@@ -17,7 +17,7 @@ import scaffolds from "./scaffolds.gif";
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.9.0`.
 
 :::info How To Upgrade?
-Please check the [Webiny 5.9.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0) for the upgrade steps.
+Please check the [Webiny 5.9.0 migration guide](/docs/release-notes/5.9.0/upgrade-guide) for the upgrade steps.
 :::
 
 ## Development
