fix: correct links

--- a/docs/release-notes/5.4.0/changelog.mdx
+++ b/docs/release-notes/5.4.0/changelog.mdx
@@ -16,7 +16,7 @@ This document highlights the most important fixes, improvements, and features, t
 
 
 :::info How To Upgrade?
-Please check the [Webiny 5.4.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.3.0-to-5.4.0) for the upgrade steps.
+Please check the [Webiny 5.4.0 migration guide](/docs/release-notes/5.4.0/upgrade-guide) for the upgrade steps.
 :::
 
 ## Headless CMS
