fix: correct title

--- a/docs/how-to-guides/upgrade-webiny.mdx
+++ b/docs/how-to-guides/upgrade-webiny.mdx
@@ -1,7 +1,7 @@
 ---
 id: upgrade-webiny
-title: Upgrade from Overview
-sidebar_label: Overview
+title: Upgrade Webiny
+sidebar_label: Upgrade Webiny
 keywords: ["webiny", "version", "upgrade"]
 description: Learn how to upgrade your Webiny project.
 ---
