wip: create frontend development articles

--- a/docs/tutorials/create-custom-application/graphql-api.mdx
+++ b/docs/tutorials/create-custom-application/graphql-api.mdx
@@ -1,7 +1,7 @@
 ---
-id: extending-graphql-api
-title: Extending GraphQL API
-sidebar_label: Extending GraphQL API
+id: graphql-api
+title: GraphQL API
+sidebar_label: GraphQL API
 keywords: ["create", "custom", "application", "graphql", "api", "scaffolding", "extend"]
 description: Learn how to quickly extend a GraphQL API with the Extend GraphQL API scaffold.
 ---
