wip: create frontend development articles

--- a/docs/tutorials/create-custom-application/react-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/react-application/introduction.mdx
@@ -14,7 +14,8 @@ import newPinModalDialog from "./introduction/new-pin-modal-dialog.png";
 :::tip WHAT YOU’LL LEARN
 
 - how to build a simple React application that interacts with an existing GraphQL API
-
+- what the React application will look like
+- the plan we'll follow in the following sections
 :::
 
 :::info Can I use this?
