--- a/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
+++ b/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
@@ -13,7 +13,8 @@ import plusHeaderButton from "./new-pin-modal-dialog/plus-header-button.png";
 
 :::tip WHAT YOU’LL LEARN
 
-- how to adapt the existing Layout component to our needs
+- how to create a simple modal dialog for creating new pins (with [Ant Design](https://ant.design/docs/react/introduce) React library)
+- how to execute GraphQL mutations using already configured [Apollo Client](https://www.apollographql.com/docs/react/v2)
 
 :::
 
@@ -112,12 +113,17 @@ export default NewPinModal;
 
 As we can see, in order to create the modal dialog, we're completely relying on the [Ant Design](https://ant.design/docs/react/introduce) React library. To create the modal dialog, we're using the [`Modal`](https://ant.design/components/modal/) component, to create the form, we're using the [`Form`](https://ant.design/components/form/) component, and we're using the [`Input`](https://ant.design/components/input/) and [`Input.TextArea`](https://ant.design/components/input/#components-input-demo-textarea) components to render the basic form fields.
 
-:::tip
+:::info
 For more information on Ant Design React library and all of the components in offers, make sure to check out its [documentation](https://ant.design/docs/react/introduce).
 :::
 
-Do note that the form in the modal dialog doesn't include the cover image field yet. We'll add this field later, when we'll be covering the file upload functionality. Also, for the purposes of this tutorial, we've included all of the React component's code in a single file. But, you can reorganize the code into multiple files, if you prefer that.
+Do note that the form in the modal dialog doesn't include the cover image field yet. We'll add this field later, when we'll be covering the file upload functionality.
 
+Finally, when it comes to interacting with our GraphQL API, in order to issue the [`CreatePin`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.02-new-pin-modal-dialog/pinterest-clone/app/code/src/components/NewPinModal.tsx#L9) GraphQL mutation, we're using [Apollo Client's](https://www.apollographql.com/docs/react/v2) [`useMutation`](https://www.apollographql.com/docs/react/v2/data/mutations/#executing-a-mutation) React hook.
+
+:::tip
+For the purposes of this tutorial, we've included all of the React component's code in a single file. But, you can reorganize the code into multiple files, if you prefer that.
+:::
 
 
 ## Add the New Pin Button to Header
