--- a/docs/tutorials/create-custom-application/react-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/react-application/introduction.mdx
@@ -30,12 +30,12 @@ In the previous [Extending GraphQL API](/docs/tutorials/create-custom-applicatio
 
 Essentially, the application will consist of the following two pages:
 
-1. homepage - a list of all pins, created by different users:
+1. **Homepage** - a list of all pins, created by different users:
 
 <CenteredImage src={viewPins} alt="The Pinterest Clone Application" />
 
 
-2. pin details page:
+2. **Pin Details**:
 
 <CenteredImage shadow={viewPins} alt="Viewing a Pin" src={viewPin} />
 
@@ -82,7 +82,7 @@ Once we're able to create new pins, we can proceed by building the homepage whic
 
 ### 4. Pin Details Page
 
-Finally, on the homepage, once a user clicks on a pin, we need to redirect her/him to the pin details page. This is where we'll show pin's title, description, and the user that created the pin.
+Finally, on the homepage, once a user clicks on a pin, we need to redirect her/him to the **Pin Details** page. This is where we'll show pin's title, description, and the user that created the pin.
 
 ## Additional Notes
 
