--- a/docs/tutorials/create-custom-application/react-application/layout.mdx
+++ b/docs/tutorials/create-custom-application/react-application/layout.mdx
@@ -118,11 +118,15 @@ const Layout: React.FC<Props> = props => {
 export default Layout;
 ```
 
-For now, this code will only render the [application logo](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images/logo.png) on the left side of the header. The **New Pin** and **User Menu** on the right, shown in the above layout diagram, will be added later, in the upcoming sections of this tutorial.
-
 :::note
 In order for the above code to work, make sure to copy and paste the [`logo.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images/logo.png) file into the [`pinterest-clone/app/code/src/images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images) folder.
 :::
+
+:::tip
+Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images) folder upon importing the [`logo.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images/logo.png) image. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
+:::
+
+For now, this code will only render the [application logo](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/images/logo.png) on the left side of the header. The **New Pin** and **User Menu** on the right, shown in the above layout diagram, will be added later, in the upcoming sections of this tutorial.
 
 If you tried to view the results of what we've been doing so far, you'd still be looking at an application that's visually broken. This is because we're missing the last piece of the puzzle, and that is adjusting the global CSS styles.
 
@@ -167,7 +171,7 @@ Once cleaned up, the [`Home`](https://github.com/webiny/webiny-examples/blob/mas
 import React from "react";
 import { RoutePlugin } from "@webiny/app/plugins/RoutePlugin";
 import { Route } from "@webiny/react-router";
-import Layout from "../../components/Layout";
+import Layout from "~/components/Layout";
 
 // The home page.
 function Home() {
