--- a/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
+++ b/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
@@ -178,7 +178,7 @@ const Layout: React.FC<{ className: string }> = props => {
 export default Layout;
 ```
 
-Once we've updated the code, we should be able to see the **&#10753;** icon in the header and open the **New Pin** dialog by clicking on it. And, of course, we should be able to create new pins by simply filling the form and pressing the **OK** button.
+Once we've updated the code, we should be able to see the **&#10753;** icon in the header and open the **New Pin** dialog by clicking on it. And, of course, we should be able to create new pins by simply filling the form and pressing the **OK** button. Feel free to create as much pins as you like!
 
 <CenteredImage src={newPinModalDialog} alt="New Pin Modal Dialog" />
 
