wip: create frontend development articles

--- a/docs/tutorials/create-custom-application/react-application/homepage.mdx
+++ b/docs/tutorials/create-custom-application/react-application/homepage.mdx
@@ -103,7 +103,7 @@ export default new RoutePlugin({
 ```
 
 :::tip
-Notice how we've used the tilde (`~`) character to target the parent [`images`](#) and [`components`](#) folders. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
+Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/images) and [`components`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/components) folders. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
 :::
 
 :::note
