wip: create frontend development articles

--- a/docs/tutorials/create-custom-application/react-application/layout.mdx
+++ b/docs/tutorials/create-custom-application/react-application/layout.mdx
@@ -188,6 +188,8 @@ export default new RoutePlugin({
 });
 ```
 
+## Final Result
+
 And this is what you should end up with once you've completed all of the steps. Basically, a blank page with just the header at the top of the screen, and that's it.
 
 <CenteredImage style={{maxWidth: 650 }} alt="Application Layout - Blank Homepage" src={endResult} />
