--- a/docs/tutorials/create-custom-application/react-application/homepage.mdx
+++ b/docs/tutorials/create-custom-application/react-application/homepage.mdx
@@ -30,14 +30,18 @@ Like in the previous section, fetching the list of created pins can be easily do
 
 <CenteredImage src={pinterestMosaicLayout} alt="Pinterest - The Mosaic Layout"/>
 
-Luckily, we can achieve this pretty easily with a small React library called [`react-columned`](https://www.npmjs.com/package/react-columned), which we'll need to add to our React application.
+Luckily, we can achieve this pretty easily with a small React library called [`react-columned`](https://www.npmjs.com/package/react-columned), which we'll need to add to our React application. Once we have that, we can start working on our homepage by adjusting the existing [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component.
+
+:::note
+We already had a quick mention of the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) React component in the [Optional Steps](/docs/tutorials/create-custom-application/react-application/layout#optional-steps) section of the [Layout](/docs/tutorials/create-custom-application/react-application/layout) step.
+:::
 
 ## Creating the Homepage
 
 For starters, let's add the mentioned [`react-columned`](https://www.npmjs.com/package/react-columned) library with the following command:
 
 ```bash
-yarn workspace pinterest-clone-app add antd
+yarn workspace pinterest-clone-app add react-columned
 ```
 
 Once we have that, we can start working on our homepage. The following is the final [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component that's responsible for rendering it, located in the [`pinterest-clone/app/code/src/plugins/routes/home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx) file:
@@ -102,19 +106,59 @@ export default new RoutePlugin({
 });
 ```
 
+:::note
+In order for the above code to work, make sure to copy and paste the [`blankImage.png`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/images/blankImage.png) file into the [`pinterest-clone/app/code/src/images`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/images) folder.
+:::
+
 :::tip
 Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/images) and [`components`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/components) folders. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
 :::
 
+As we can see, the file contains the [`Home`](#) React component, in which we're simply issuing the `ListPins` GraphQL query, and then, based on the received data, rendering each pin as an image and link to the **Pin Details** page (more on this soon). And, in order to achieve the mentioned mosaic layout, the pins are wrapped with the `Columned` component, imported from the added [`react-columned`](https://www.npmjs.com/package/react-columned) package.
+
+Furthermore, note that, by default, the React application that's generated during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process uses [`@webiny/react-router`](https://github.com/webiny/webiny-js/tree/next/packages/react-router) library, which is a plugins-based React application router. In other words, all of the application routes are defined via [`RoutePlugin`](#) plugins, which is why we're exporting that instead of the actual [`Home`](#) React component:
+
+```tsx title="pinterest-clone/app/code/src/plugins/routes/home.tsx"
+// We register routes via the `RoutePlugin` plugin.
+export default new RoutePlugin({
+    route: <Route path="/" exact component={Home} />
+});
+```
+
+All of these plugins are then registered in the [`pinterest-clone/app/code/src/plugins/index.ts`](#) plugins entrypoint file. For example, in case of the **Homepage**, we have the following:
+
+```ts title="pinterest-clone/app/code/src/plugins/index.ts" {3,12}
+import { plugins } from "@webiny/plugins";
+import apolloLinkPlugins from "./apollo";
+import home from "./routes/home";
+import notFound from "./routes/notFound";
+
+// Imports and registers all defined plugins.
+plugins.register([
+    // Various Apollo client plugins.
+    apolloLinkPlugins,
+
+    // Application routes.
+    home,
+    notFound
+]);
+```
+
 :::note
-We already had a quick mention of the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.01-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) React component in the [Optional Steps](/docs/tutorials/create-custom-application/react-application/layout#optional-steps) section of the [Layout](/docs/tutorials/create-custom-application/react-application/layout) step.
+At the moment, this file already includes all of the necessary imports. No further changes need to be made.
 :::
 
+:::info
+The [`@webiny/react-router`](https://www.npmjs.com/package/@webiny/react-router) library is a thin wrapper around the popular [React Router](https://www.npmjs.com/package/react-router) and its [`react-router-dom`](https://www.npmjs.com/package/react-router-dom) library, which just adds a couple of minor features to it. For example, via the [`ReactRouterOnLinkPlugin`](#) plugin, it gives developers the ability to execute a piece of code for every link that's rendered on the page.
+:::
+
+
+## Final Result
 
 With this component in place, our homepage should look like the following:
 
 <CenteredImage src={homepage} alt="Homepage - List of Pins"/>
 
-At the moment, we could probably say that our homepage looks a bit bland and maybe boring. But let's not worry about it for now. The whole page will start looking much more lively and nicer as soon as we bring the missing cover image field and file upload functionality into the mix.
+At the moment, we could probably say that our homepage looks a bit bland and maybe boring. But we don't need to worry about that for now. The whole page will start looking much more lively as soon as we bring the missing cover image field and file upload functionality into the mix.
 
 For now, our goal was to have our homepage show a list of pins created by different users, and we've certainly achieved that. This means we're ready for the final step, and that's creating the **Pin Details** page.
