wip: create frontend development articles

--- a/docs/tutorials/create-custom-application/react-application/homepage.mdx
+++ b/docs/tutorials/create-custom-application/react-application/homepage.mdx
@@ -114,9 +114,9 @@ In order for the above code to work, make sure to copy and paste the [`blankImag
 Notice how we've used the tilde (`~`) character to target the parent [`images`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/images) and [`components`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/components) folders. Using that instead of something like `../../../` can make our import statements easier to read and maintain.
 :::
 
-As we can see, the file contains the [`Home`](#) React component, in which we're simply issuing the `ListPins` GraphQL query, and then, based on the received data, rendering each pin as an image and link to the **Pin Details** page (more on this soon). And, in order to achieve the mentioned mosaic layout, the pins are wrapped with the `Columned` component, imported from the added [`react-columned`](https://www.npmjs.com/package/react-columned) package.
+As we can see, the file contains the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component, in which we're simply issuing the `ListPins` GraphQL query, and then, based on the received data, rendering each pin as an image and link to the **Pin Details** page (more on this soon). And, in order to achieve the mentioned mosaic layout, the pins are wrapped with the `Columned` component, imported from the added [`react-columned`](https://www.npmjs.com/package/react-columned) package.
 
-Furthermore, note that, by default, the React application that's generated during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process uses [`@webiny/react-router`](https://github.com/webiny/webiny-js/tree/next/packages/react-router) library, which is a plugins-based React application router. In other words, all of the application routes are defined via [`RoutePlugin`](#) plugins, which is why we're exporting that instead of the actual [`Home`](#) React component:
+Furthermore, note that, by default, the React application that's generated during the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffolding process uses [`@webiny/react-router`](https://github.com/webiny/webiny-js/tree/next/packages/react-router) library, which is a plugins-based React application router. In other words, all of the application routes are defined via [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins, which is why we're exporting that instead of the actual [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/home.tsx"
 // We register routes via the `RoutePlugin` plugin.
@@ -125,7 +125,7 @@ export default new RoutePlugin({
 });
 ```
 
-All of these plugins are then registered in the [`pinterest-clone/app/code/src/plugins/index.ts`](#) plugins entrypoint file. For example, in case of the **Homepage**, we have the following:
+All of these plugins are then registered in the [`pinterest-clone/app/code/src/plugins/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.03-homepage/pinterest-clone/app/code/src/plugins/index.ts) plugins entrypoint file. For example, in case of the **Homepage**, we have the following:
 
 ```ts title="pinterest-clone/app/code/src/plugins/index.ts" {3,12}
 import { plugins } from "@webiny/plugins";
@@ -149,7 +149,7 @@ At the moment, this file already includes all of the necessary imports. No furth
 :::
 
 :::info
-The [`@webiny/react-router`](https://www.npmjs.com/package/@webiny/react-router) library is a thin wrapper around the popular [React Router](https://www.npmjs.com/package/react-router) and its [`react-router-dom`](https://www.npmjs.com/package/react-router-dom) library, which just adds a couple of minor features to it. For example, via the [`ReactRouterOnLinkPlugin`](#) plugin, it gives developers the ability to execute a piece of code for every link that's rendered on the page.
+The [`@webiny/react-router`](https://www.npmjs.com/package/@webiny/react-router) library is a thin wrapper around the popular [React Router](https://www.npmjs.com/package/react-router) and its [`react-router-dom`](https://www.npmjs.com/package/react-router-dom) library, which just adds a couple of minor features to it. For example, via the [`ReactRouterOnLinkPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/react-router/src/types.ts#L4) plugin, it gives developers the ability to execute a piece of code for every link that's rendered on the page.
 :::
 
 
