--- a/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
+++ b/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
@@ -141,7 +141,7 @@ type Props = RouteChildrenProps<{ id: string }>;
 This is what lets us define the type of `props.match.params` and, ultimately, freely access `props.match.params.id`.
 
 :::info
-In case you missed it, the [`@webiny/react-router`](https://www.npmjs.com/package/@webiny/react-router) library is a thin wrapper around the popular [React Router](https://www.npmjs.com/package/react-router) and its [`react-router-dom`](https://www.npmjs.com/package/react-router-dom) library, which just adds a couple of minor features to it. For example, via the [`ReactRouterOnLinkPlugin`](#) plugin, it gives developers the ability to execute a piece of code for every link that's rendered on the page.
+In case you missed it, the [`@webiny/react-router`](https://www.npmjs.com/package/@webiny/react-router) library is a thin wrapper around the popular [React Router](https://www.npmjs.com/package/react-router) and its [`react-router-dom`](https://www.npmjs.com/package/react-router-dom) library, which just adds a couple of minor features to it. For example, via the [`ReactRouterOnLinkPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/react-router/src/types.ts#L4) plugin, it gives developers the ability to execute a piece of code for every link that's rendered on the page.
 :::
 
 ## Registering the `RoutePlugin` Plugin
